spec/fixtures/test_suites/malformed/invalid_methods_defined/attack_and_attack_on_port.rb
class AttackAndAttackOnPort < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'

  def attack
    nil
  end

  def attack_on_port(_)
    nil
  end
end
